# ifttt-action

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  crypto.rs  lib.rs  mapper.rs  rss.rs  weather.rs  web.rs
