[package]
authors = ["Zhiyuan Zheng <zhzy0077@hotmail.com>"]
edition = "2018"
name = "ifttt-action"
version = "0.1.0"

[dependencies]
anyhow = "1.0.31"
async-std = {version = "1.6.2", features = ["tokio02"]}
async-trait = "0.1.36"
reqwest = "0.10.6"
ring = { version = "0.16.15", features = ["std"] }
rss = {version = "1.9.0", default-features = false}
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.56"
toml = "0.5.6"
enum_dispatch = "0.3.1"
futures-util = "0.3.5"
lazy_static = "1.4.0"
